# xfce4-notes-plugin

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  configure  configure.ac  configure.ac.in  configure.in.in  meson.build  module.xml  xfce4-notes-plugin.spec.in  xfce4-notes.desktop.in
data/: Makefile.am  meson.build
data/gtk-2.0/: Makefile.am  notes.gtkrc
data/gtk-2.0/scrollbars/: Makefile.am
data/gtk-2.0/tabs/: Makefile.am
data/gtk-3.0/: Makefile.am  gtk-main.css  gtk.css  gtk.css.in  meson.build
data/icons/: Makefile.am  meson.build
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/scalable/: Makefile.am
data/pixmaps/: Makefile.am
data/vapi/gtk214/: gtk+-2.0.vapi
data/vapi/xfce46/: libxfce4panel-1.0.deps  libxfce4panel-1.0.vapi  libxfcegui4-1.0.vapi
data/vapi/xfce47/: libxfce4panel-1.0.vapi
icons/: Makefile.am
icons/16x16/: Makefile.am
icons/22x22/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/scalable/: Makefile.am
lib/: Makefile.am  application.vala  color.c  color.h  config.vapi  ext-gdk.c  ext-gdk.h  ext-gdk.vapi  file-utils.vala  hypertextview.vala  icon-button.vala  meson.build  note.vala  popup.c  popup.h  popup.vapi  theme-gtkcss.vala  theme-gtkrc.c  theme-gtkrc.h  theme-gtkrc.vapi  theme.vala  window-monitor.vala  window.vala
libc/: Makefile.am  meson.build  xfce-autostart.c  xfce-autostart.vapi
m4/: Makefile  Makefile.am  Makefile.in
panel-plugin/: Makefile.am  Makefile.in  application.vala  color.c  color.h  color.vapi  config.vapi  defines.h  hypertextview.vala  main-panel-plugin-47.vala  main-panel-plugin.vala  main-status-icon.vala  main.vala  note.h  note.vala  notes-options.c  notes-options.h  notes-properties-dialog.c  notes-properties-dialog.h  notes-window.c  notes-window.h  notes.c  notes.h  notes_applet.c  notes_icons.h  notes_options.c  panel-plugin.c  popup.c  popup.vapi  settings-dialog.c  settings-dialog.h  window.vala  xfce-arrow-button.c  xfce-arrow-button.h  xfce-autostart.h  xfce4-notes-autostart.desktop.in  xfce4-notes-plugin-47.desktop.in  xfce4-notes-plugin-47.desktop.in.in  xfce4-notes-plugin.desktop.in.in  xfce4-notes-settings.c  (+2 more)
pixmaps/: Makefile.am  Makefile.in
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  TRANSLATORS  am.po  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lo.po  lt.po  lv.po  (+28 more)
src/: Makefile.am  defines.h  main-panel-plugin-47.vala  main-panel-plugin.vala  main-popup.vala  main-settings-dialog.c  main-status-icon.vala  meson.build  xfce-autostart.vapi  xfce4-notes-autostart.desktop.in  xfce4-notes-plugin.desktop.in  xfce4-notes-plugin.desktop.in.in  xfce4-notes-settings.c  xfce4-notes.desktop.in
